2009-08-09	Andreas Otto	<andreas@otto-hanika.de>

	* Added feature #4270: displayCond for flexforms, that affects on row of element (thanks to Tolleiv Nietsch and Rupert German)

2009-08-05  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11627: Add CSS-Class and Ids to fields in TCEFORMS

2009-08-05  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11539: t3ver_stage will not be resetted when t3ver_stage was >0 before (thanks to Fabrizio Branca)
	* Fixed #11430: Performance improvement: use $GLOBALS['EXEC_TIME'] instead of time() where it makes sense (thanks to Niels Pardon)
	* Fixed #11512: Performance improvement: replace while(list()...) by foreach in the TYPO3 core (part 1)
	* Fixed #11474: Performance improvement: Store separate extlist for the frontend (thanks to Mathias Schreiber)
	* Fixed #11475: Add 'doNotLoadInFE' => 1 (introduced with 11474), to several system extensions, speeding up the frontend (thanks to Mathias Schreiber)

2009-08-04  Michael Stucki  <michael@typo3.org>

	* Follow-up to bug #11410: Non-functional code cleanup

2009-08-03  Benjamin Mack  <benni@typo3.org>

	* Fixed #11628: Frontend Editing does not work with an iframe

2009-08-03  Ingo Renner  <ingo@typo3.org>

	* Updated Caching Framework to be in sync with FLOW3 revision 2953

2009-08-02  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11585: Faulty usage of t3lib_matchCondition in backend template
	* Follow-up to bug #11585: Added unit test for t3lib_matchCondition
	* Fixed bug #10769: Wrong encoded email header (thanks to Ivan Kartolo)
	* Follow-up to bug #10769: Added unit tests for t3lib_div::encodeHeader()
	* Added test #11626: Extend unit tests for t3lib_matchCondition globalVar comparison

2009-08-02  Christian Kuhn  <lollli@schwarzbu.ch>

	* Added feature #11500: Order fe_groups in select fields alphabetically (Thanks to Steffen Gebert)

2009-08-01  Christian Kuhn  <lollli@schwarzbu.ch>
