@@ -42,13 +42,18 @@ require('template.php');
 
 	// Find module path:
 $temp_M = (string)t3lib_div::_GET('M');
-if ($temp_path = $TBE_MODULES['_PATHS'][$temp_M])	{
-	$MCONF['_'] = 'mod.php?M='.rawurlencode($temp_M);
-	require($temp_path.'conf.php');
-	$BACK_PATH='';
-	require($temp_path.'index.php');
+if (substr($temp_M, 0, 3) === 'Tx_') {
+	$dispatcher = t3lib_div::makeInstance('Tx_Extbase_BackendDispatcher');
+	$dispatcher->callModule(substr($temp_M, 3));
 } else {
-	die('Value "'.htmlspecialchars($temp_M).'" for "M" was not found as a module');
+	if ($temp_path = $TBE_MODULES['_PATHS'][$temp_M]) {
+		$MCONF['_'] = 'mod.php?M=' . rawurlencode($temp_M);
+		require($temp_path . 'conf.php');
+		$BACK_PATH = '';
+		require($temp_path . 'index.php');
+	} else {
+		die('Value "' . htmlspecialchars($temp_M) . '" for "M" was not found as a module');
+	}
 }
 
 ?>
